--- a/src/app/tab1/poke-list/poke-list.component.html
+++ b/src/app/tab1/poke-list/poke-list.component.html
@@ -1,4 +1,4 @@
-<div class="list">
+<div class="list" *ngIf="!loading">
   <header class="title">TESTE</header>
   <app-card-pokemon [pokeList]="pokeList"></app-card-pokemon>
   <button (click)="morePokemons()">More</button>
