--- a/src/app/shared/card-pokemon/card-pokemon.component.html
+++ b/src/app/shared/card-pokemon/card-pokemon.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngFor="let pokemon of pokeList, let i = index">
   <div [ngClass]="'card type--' + pokemon.pokemon.types[0].type.name">
     <div class="info">
-      <p>Nº {{formatarNumero(pokemon.pokemon.id)}}</p>
+      <p class="number">Nº {{formatarNumero(pokemon.pokemon.id)}}</p>
       <p class="name">
         {{ upperCaseFisrtLetter(pokemon.pokemon.name) }}
       </p>
