--- a/src/app/shared/card-pokemon/card-pokemon.component.scss
+++ b/src/app/shared/card-pokemon/card-pokemon.component.scss
@@ -1,3 +1,5 @@
+@import '../../../theme/main.scss';
+
 .card {
   display: flex;
   justify-content: space-between;
@@ -9,11 +11,17 @@
 }
 
 .name {
-  font-family: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 21px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+  color: black;
+}
+
+.number {
+  font-family: 'Poppins';
+  font-size: 16px;
   color: black;
 }
 
