--- a/src/app/tab1/poke-list/poke-list.component.html
+++ b/src/app/tab1/poke-list/poke-list.component.html
@@ -1,7 +1,7 @@
-<div class="list" *ngIf="!loading">
+<div class="list">
   <header class="title">TESTE</header>
   <app-card-pokemon [pokeList]="pokeList"></app-card-pokemon>
-  <button (click)="morePokemons()">More</button>
+  <ion-button expand="block" (click)="morePokemons()" shape="round" fill="clear">Carregar mais</ion-button>
 </div>
 
 
