--- a/src/app/shared/badge/badge.component.scss
+++ b/src/app/shared/badge/badge.component.scss
@@ -11,14 +11,15 @@
 .badge {
   border-radius: 50px;
   height: 35px;
-  display: flex;
   align-items: center;
-  width: 80px;
+  width: 90px;
   margin-top: 3px;
+  display: flex;
+  gap: 5%;
+  padding-left: 5%;
 }
 
 p {
-  width: 100%;
   text-align: center;
 }
 
