--- a/src/app/shared/card-pokemon/card-pokemon.component.html
+++ b/src/app/shared/card-pokemon/card-pokemon.component.html
@@ -7,6 +7,8 @@
       </p>
       <app-badge [pokeType]="pokemon.pokemon.types"></app-badge>
     </div>
-    <img [src]="pokemon.pokemon.sprites.front_shiny" alt="" />
+    <div [ngClass]="'image-container bg-type--' + pokemon.pokemon.types[0].type.name">
+      <img [src]="pokemon.pokemon.sprites.front_default" alt="" />
+    </div>
   </div>
 </ng-container>
