--- a/src/app/shared/badge/badge.component.scss
+++ b/src/app/shared/badge/badge.component.scss
@@ -3,7 +3,7 @@
 .types {
   display: flex;
   align-items: center;
-  gap: 5%;
+  gap: 3%;
   width: 100%;
   font-family: 'Poppins', sans-serif;
 }
@@ -17,6 +17,7 @@
   display: flex;
   gap: 5%;
   padding-left: 5%;
+  padding-right: 20%;
 }
 
 p {
